# Rustlike

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  WISHLIST  index.html  search-index.js
gl/: Cargo.toml  README.md  example.rs
gl/buffer/: array_object.rs  mod.rs
gl/program/: mod.rs  shaders.rs
gl/src/: attributes.rs  errors.rs  example.rs  lib.rs  raw.rs  uniforms.rs
gl/src/buffer/: array_object.rs  buffer_object.rs  mod.rs
gl/src/program/: errors.rs  mod.rs  questions.rs  shaders.rs  uniforms.rs
gl/tests/: lib.rs  macro.rs  program.rs  uniforms.rs  vertex.rs
gl_derive/: Cargo.toml
gl_derive/src/: context.rs  describe_attributes.rs  errors.rs  lib.rs  updatable_uniforms.rs  utils.rs
gl_derive/tests/: describe_attributes.rs  updateable_uniforms.rs
hooks/: pre-commit
main/: index.html
num/: trait.Bounded.html  trait.CheckedAdd.html  trait.CheckedDiv.html  trait.CheckedMul.html  trait.CheckedSub.html  trait.FromPrimitive.html  trait.Integer.html  trait.Num.html  trait.NumCast.html  trait.One.html  trait.PrimInt.html  trait.Saturating.html  trait.Signed.html  trait.ToPrimitive.html  trait.Unsigned.html  trait.Zero.html
rl_gl/: index.html  sidebar-items.js  trait.GlObject.html
rl_gl_derive/: describe_attributes.v.html  fn.describe_attributes.html  index.html  sidebar-items.js
rustlike/: fn.run.html  index.html  sidebar-items.js
sdl2/: index.html
sdl2_sys/: constant.AUDIO_F32.html  constant.AUDIO_F32LSB.html  constant.AUDIO_F32MSB.html  constant.AUDIO_F32SYS.html  constant.AUDIO_S16.html  constant.AUDIO_S16LSB.html  constant.AUDIO_S16MSB.html  constant.AUDIO_S16SYS.html  constant.AUDIO_S32.html  constant.AUDIO_S32LSB.html  constant.AUDIO_S32MSB.html  constant.AUDIO_S32SYS.html  constant.AUDIO_S8.html  constant.AUDIO_U16.html  constant.AUDIO_U16LSB.html  constant.AUDIO_U16MSB.html  constant.AUDIO_U16SYS.html  constant.AUDIO_U8.html  constant.BIG_ENDIAN.html  constant.BYTE_ORDER.html  constant.EXIT_FAILURE.html  constant.EXIT_SUCCESS.html  constant.FD_SETSIZE.html  constant.HAVE_GCC_SYNC_LOCK_TEST_AND_SET.html  constant.HAVE_STDARG_H.html  constant.HAVE_STDDEF_H.html  constant.HAVE_STDINT_H.html  constant.INT16_MAX.html  constant.INT16_MIN.html  constant.INT32_MAX.html  constant.INT32_MIN.html  constant.INT8_MAX.html  (+1706 more)
src/: lib.rs  (+9 more)
src/gl_derive/: Cargo.toml
(+2559 files in other folders)
