[package]
authors = ["Justin Hurst <jryanhurst@gmail.com"]
name = "rustlike"
version = "0.1.0"

[dependencies]
piston = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"
pistoncore-glutin_window = "*"
num = "0.1.40"

serde = "1.0.*"
serde_derive = "1.0.*"
bincode = "0.8.*"

[dev-dependencies]
spectral = "0.6.0"
