[package]
authors = ["Justin Hurst <jryanhurst@gmail.com"]
name = "rustlike"
version = "0.1.0"
build = "build/main.rs"


[dependencies]
gl_derive = { path = "./src/gl_derive" }

[dependencies.sdl2]
git = "https://github.com/Rust-SDL2/rust-sdl2.git"
rev = "5ac69465"

[features]
default = []
use_sdl2_mac_framework = ["sdl2/use_mac_framework"]

[dev-dependencies]
rspec = "1.0.0-beta.4"
expect = "0.0.1"

[build-dependencies]
gl_generator = "0.5.*"
