[package]
name = "rl_gl_derive"
version = "0.1.0"
authors = ["Justin Hurst <jryanhurst@gmail.com>"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[lib]
name = "rl_gl_derive"
proc-macro = true

[dependencies]
quote = "0.3"
syn = { version = "0.11", features = ["visit"] }

[dev-dependencies]
rspec = "1.0.0-beta.4"
expect = "0.0.1"
rl_gl = { path = "../gl" }