[package]
name = "gl_derive"
version = "0.1.0"
authors = ["Justin Hurst <jryanhurst@gmail.com>"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[lib]
name = "gl_derive"
proc-macro = true

[dependencies]
quote = "0.3"
syn = { version = "0.11", features = ["visit"] }

[dev-dependencies]
 rustlike = { path = "../Rustlike" }